# quickhooks

./: IMPLEMENTATION_SUMMARY.md  Makefile  README.md  pyproject.toml  test_claude_code_compliance.py  test_full_uv_workflow.py  test_hook_manual.py  test_installation_demo.py  test_official_hook_format.py  test_schema_compliance_audit.py  test_schema_validation.py  test_uv_install.py  test_uv_integration.py
.claude/: settings.json
.claude/skills/moai-alfred-ask-user-questions/: examples.md
.context-portal/: project.db
.github/workflows/: ci.yml  publish.yml  release.yml  semver.yml
.moai/: config.json
.moai/memory/: user-patterns.json
.moai/project/: product.md  structure.md  tech.md
docs/: PUBLISHING.md  WORKFLOW_UPDATES.md  environment-variables.md  getting-started.md  session-hooks.md
examples/: agent_analysis_demo.py  context_portal_demo.py
hooks/: agent_analysis_hook.py  context_portal_memory.py  context_portal_memory_official.py  example_hook.py  grep_to_ripgrep.py  session_end_example.py  session_start_example.py
scripts/: bump_version.py  deploy.py  setup_claude_code_integration.py
src/quickhooks/: __init__.py  __main__.py  config.py  dev.py  executor.py  models.py  runner.py
src/quickhooks/agent_analysis/: __init__.py  agent_discovery.py  analyzer.py  command.py  context_manager.py  types.py
src/quickhooks/claude_code/: __init__.py
src/quickhooks/cli/: install.py  main.py  smart.py
src/quickhooks/db/: models.py
src/quickhooks/hooks/: __init__.py  base.py
tests/: conftest.py  test_agent_analysis.py  test_base_hook.py  test_config.py  test_context_portal_memory.py  test_dev.py  test_example_hook.py  test_executor.py  test_grep_to_ripgrep.py  test_install.py  test_models.py  test_runner.py
(+9 files in other folders)
