[project]
name = "quickhooks"
version = "0.1.0"
description = "A streamlined TDD framework for Claude Code hooks with real-time feedback"
readme = "README.md"
authors = [
    { name = "Kevin Hill", email = "kivo360@gmail.com" }
]
requires-python = ">=3.12"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "typer[all]>=0.9.0",
    "pydantic>=2.5.0",
    "watchfiles>=0.20.0", # Using watchfiles instead of watchdog
    "rich>=13.7.0", # For rich console output in CLI
    "jsonschema>=4.25.0",
    "groq>=0.13.0", # Groq API client
    "pydantic-ai-slim[groq]>=0.0.49", # Pydantic AI with Groq support
    "chromadb>=0.4.0", # Vector database for agent discovery
    "sentence-transformers>=2.2.0", # For text embeddings
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "mypy>=1.8.0",
    "ruff>=0.1.9",
    "pre-commit>=3.0.0",
    "rich>=13.7.0",
]

[project.scripts]
quickhooks = "quickhooks.cli:app"
quickhooks-dev = "quickhooks.dev:main"  # Development server with hot reload

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "mypy>=1.8.0",
    "ruff>=0.1.9",
    "pre-commit>=3.0.0",
    "rich>=13.7.0",
]
